@@ -1,3 +1,12 @@
+2010-05-30  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
+
+	* aprx.h, digipeater.c:
+	    Use 'float' for ratelimit variables.  Permitting as low
+	    rate definitions as 'once per 10 minutes.
+
+	* dprsgw.c:
+	    XOR checksums of "GPS" mode packets.  No Rx-iGate of them yet.
+
 2010-05-29  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
 
 	* dprsgw.c, ttyreader.c, aprx.c, aprx.h:
